--- a/gabung/v4.html
+++ b/gabung/v4.html
@@ -3,72 +3,84 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Backup & Import Data MadGazan</title>
+<title>Backup & Filter Data MadGazan</title>
 <style>
-  body { 
-    font-family: Arial, sans-serif; 
-    margin: 15px; 
-    max-width: 600px; 
-    margin-inline:auto; 
-    background-color:#fffef9; 
+  body {
+    font-family: Arial, sans-serif;
+    margin: 15px;
+    max-width: 600px;
+    margin-inline:auto;
+    background-color:#fffef9;
   }
-  h1,h2,h3 { color:#b36b00; text-align:center; }
+  h1,h3 { color:#b36b00; text-align:center; }
   h1 { font-size:1.6rem; margin-bottom:5px; }
-  .backup-area { 
-    padding:12px; 
-    background:#fffbe6; 
-    border-radius:8px; 
-    border:1px solid #ffd42a; 
-    text-align:center; 
+  .section {
+    padding:12px;
+    background:#fffbe6;
+    border-radius:8px;
+    border:1px solid #ffd42a;
+    text-align:center;
+    margin-bottom:20px;
   }
-  .input-buttons { 
-    display:flex; 
-    gap:8px; 
-    margin-top:6px; 
-    flex-wrap:wrap; 
-    justify-content:center; 
+  button, input[type="file"], textarea {
+    padding:10px;
+    font-size:0.95rem;
+    border-radius:6px;
+    border:1px solid #ccc;
+    background:#f5f5f5;
+    cursor:pointer;
   }
-  .input-buttons button, .input-buttons input[type="file"] { 
-    flex:1; 
-    padding:10px; 
-    font-size:0.95rem; 
-    cursor:pointer; 
-    border:1px solid #ccc; 
-    border-radius:6px; 
-    background:#f5f5f5; 
+  button:hover { background:#eee; }
+  textarea {
+    width:100%;
+    height:70px;
+    resize:none;
+    margin-top:6px;
+    font-family:monospace;
   }
-  .input-buttons button:hover { background:#eee; }
   #toast {
-    position: fixed; bottom: 25px; right: 25px; 
-    padding: 12px 20px; border-radius: 8px; 
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3); 
-    opacity: 0; transform: translateY(20px); 
-    transition: opacity 0.4s, transform 0.4s; 
-    z-index: 9999; max-width: 320px; white-space: pre-line; 
+    position: fixed; bottom: 25px; right: 25px;
+    padding: 12px 20px; border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    opacity: 0; transform: translateY(20px);
+    transition: opacity 0.4s, transform 0.4s;
+    z-index: 9999; max-width: 320px; white-space: pre-line;
     line-height:1.3; font-size:0.95rem; color:#fff;
   }
-  pre { font-family: monospace; }
+  pre {
+    font-family: monospace;
+    text-align:left;
+    margin-top:12px;
+    padding:10px;
+    background:#f9f9f9;
+    border:1px solid #ddd;
+    border-radius:6px;
+    max-height:300px;
+    overflow:auto;
+  }
 </style>
 </head>
 <body>
 
-<h1>Backup & Import Data</h1>
+<h1>Backup & Filter Data</h1>
 
-<div class="backup-area">
-  <h3>🔒 Import & Lihat Semua Data LocalStorage</h3>
-  <div class="input-buttons">
-    <input type="file" id="importFile" accept=".json">
-    <button onclick="importUniversal()">📦 Import Universal</button>
-    <button onclick="showAllLocalStorageData()">📄 Tampilkan Semua Data</button>
-  </div>
-  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
+<div class="section">
+  <h3>📁 Import & Tampilkan Data</h3>
+  <input type="file" id="importFile" accept=".json">
+  <br><br>
+  <button onclick="importUniversal()">Import Universal</button>
+  <button onclick="showAllData()">Tampilkan Semua Data</button>
 </div>
 
-<div class="display-area" style="margin-top:20px; text-align:center;">
-  <pre id="localData" style="text-align:left; margin-top:12px; padding:10px; background:#f9f9f9; border:1px solid #ddd; border-radius:6px; max-height:300px; overflow:auto;"></pre>
+<div class="section">
+  <h3>🧹 Filter / Hapus Berdasarkan ID Toko</h3>
+  <p>Masukkan satu atau beberapa ID toko Shopee (pisahkan dengan koma atau baris baru):</p>
+  <textarea id="filterIds" placeholder="Contoh: 968553125, 123456789"></textarea>
+  <button onclick="filterByStoreIds()">🚫 Filter & Hapus Link Toko</button>
 </div>
 
-<!-- Toast -->
+<pre id="output">📭 Belum ada data yang ditampilkan.</pre>
+
 <div id="toast"></div>
 
 <script>
@@ -94,14 +106,14 @@ function showToast(message, type='info') {
 function importUniversal() {
   const fileInput = document.getElementById('importFile');
   const file = fileInput.files[0];
-  if (!file) return showToast('❌ Pilih file JSON dulu.', 'error');
+  if (!file) return showToast('❌ Pilih file JSON terlebih dahulu.', 'error');
   const reader = new FileReader();
   reader.onload = e => {
     try {
       const data = JSON.parse(e.target.result);
       Object.keys(data).forEach(key => localStorage.setItem(key, data[key]));
-      showToast('✅ Data berhasil diimport (Universal).', 'success');
-      setTimeout(showAllLocalStorageData, 1000);
+      showToast('✅ Data berhasil diimport.', 'success');
+      showAllData();
     } catch (err) {
       showToast('❌ File tidak valid: ' + err.message, 'error');
     }
@@ -109,79 +121,73 @@ function importUniversal() {
   reader.readAsText(file);
 }
 
-/* ===== Reset Semua Data ===== */
-function resetLocalStorage() {
-  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
-    localStorage.clear();
-    showToast('⚠️ Semua data LocalStorage telah dihapus.', 'warning');
-    document.getElementById('localData').textContent = '';
-  }
-}
-
 /* ===== Tampilkan Semua Data ===== */
-function showAllLocalStorageData() {
-  const display = document.getElementById('localData');
-  if (localStorage.length === 0) {
-    display.textContent = '📭 LocalStorage kosong.';
-    showToast('ℹ️ Tidak ada data untuk ditampilkan.', 'info');
-    return;
-  }
+function showAllData() {
   const data = {};
   for (let i = 0; i < localStorage.length; i++) {
     const key = localStorage.key(i);
     data[key] = localStorage.getItem(key);
   }
-  display.textContent = JSON.stringify(data, null, 2);
-  showToast('✅ Semua data LocalStorage berhasil ditampilkan.', 'success');
+  const out = document.getElementById('output');
+  out.textContent = Object.keys(data).length
+    ? JSON.stringify(data, null, 2)
+    : '📭 LocalStorage kosong.';
+  showToast('✅ Semua data ditampilkan.', 'success');
 }
-</script>
 
-<!-- ===== Fitur Filter Toko ===== -->
-<hr style="margin:25px 0;">
-<h3 style="text-align:center; color:#b36b00;">🧹 Filter Berdasarkan ID Toko Shopee</h3>
-
-<div style="text-align:center; margin-bottom:12px;">
-  <input id="shopInput" type="text" placeholder="Masukkan link atau ID toko Shopee..." 
-         style="width:90%; max-width:400px; padding:8px; border:1px solid #ccc; border-radius:6px;">
-</div>
-<div style="text-align:center;">
-  <button onclick="filterByShopId()" 
-          style="padding:10px 18px; background:#ffefc2; border:1px solid #d4a017; border-radius:6px; cursor:pointer;">
-    🚫 Hapus Semua Data dari Toko Ini
-  </button>
-</div>
-
-<script>
-function filterByShopId() {
-  const input = document.getElementById('shopInput').value.trim();
-  if (!input) return showToast('⚠️ Masukkan link atau ID toko terlebih dahulu.', 'warning');
-
-  // Ekstrak ID toko dari link Shopee jika ada
-  const shopIdMatch = input.match(/shopee\.co\.id\/product\/(\d+)/);
-  const shopId = shopIdMatch ? shopIdMatch[1] : input.replace(/\D/g, ''); // hanya ambil angka
-
-  if (!shopId) return showToast('❌ Tidak dapat menemukan ID toko yang valid.', 'error');
-
-  let deleted = 0;
-  const toDelete = [];
-
-  // Cari data di localStorage yang mengandung ID toko
+/* ===== Auto Backup Sebelum Filter ===== */
+function backupBeforeFilter() {
+  const data = {};
   for (let i = 0; i < localStorage.length; i++) {
     const key = localStorage.key(i);
-    const value = localStorage.getItem(key);
-    if (value && value.includes(shopId)) {
-      toDelete.push(key);
+    data[key] = localStorage.getItem(key);
+  }
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'backup_sebelum_filter.json';
+  a.click();
+  URL.revokeObjectURL(url);
+}
+
+/* ===== Filter Berdasarkan ID Toko ===== */
+function filterByStoreIds() {
+  const idsInput = document.getElementById('filterIds').value.trim();
+  if (!idsInput) return showToast('⚠️ Masukkan minimal satu ID toko.', 'warning');
+  
+  backupBeforeFilter(); // aman, auto backup
+  
+  const ids = idsInput.split(/[\s,]+/).filter(Boolean);
+  let totalRemoved = 0;
+  const newData = {};
+
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    let value = localStorage.getItem(key);
+    try {
+      const parsed = JSON.parse(value);
+      if (parsed && parsed.inputList) {
+        const lines = parsed.inputList.split('\n').map(l => l.trim()).filter(Boolean);
+        const filtered = lines.filter(line => !ids.some(id => line.includes(`product/${id}/`) || line.includes(`product/${id}`)));
+        totalRemoved += lines.length - filtered.length;
+        if (filtered.length > 0) {
+          parsed.inputList = filtered.join('\n');
+          newData[key] = JSON.stringify(parsed);
+        }
+      } else {
+        newData[key] = value;
+      }
+    } catch {
+      newData[key] = value;
     }
   }
 
-  // Hapus semua yang cocok
-  toDelete.forEach(k => {
-    localStorage.removeItem(k);
-    deleted++;
-  });
+  localStorage.clear();
+  Object.keys(newData).forEach(k => localStorage.setItem(k, newData[k]));
 
-  showToast(`🧹 ${deleted} data dari toko ID ${shopId} berhasil dihapus.`, 'success');
-  showAllLocalStorageData(); // tampilkan ulang data terbaru setelah dihapus
+  showAllData();
+  showToast(`✅ Filter selesai. ${totalRemoved} link dihapus.`, 'success');
 }
 </script>
 
