--- a/gabung/v4.html
+++ b/gabung/v4.html
@@ -1,300 +1,127 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Filter Toko Shopee - MadGazan</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Filter / Hapus Berdasarkan ID Toko Shopee</title>
 <style>
-  body{font-family:Arial, sans-serif;margin:15px;max-width:900px;margin-inline:auto;background:#fffef9;color:#222}
-  h1,h3{color:#b36b00;text-align:center}
-  .card{padding:12px;background:#fffbe6;border-radius:8px;border:1px solid #ffd42a;margin-bottom:16px;text-align:center}
-  button, textarea, input{padding:8px 10px;font-size:0.95rem;border-radius:6px;border:1px solid #ccc;background:#f5f5f5;cursor:pointer}
-  textarea{width:100%;height:70px;resize:none;margin-top:8px;font-family:monospace}
-  button:hover,textarea:hover,input:hover{background:#eee}
-  #toast{position:fixed;right:20px;bottom:20px;padding:12px 16px;border-radius:8px;color:#fff;opacity:0;transform:translateY(12px);transition:opacity .3s,transform .3s;z-index:9999}
-  .output{background:#fff;padding:12px;border-radius:8px;border:1px solid #eee}
-  .links{list-style:none;padding:0;margin:0}
-  .links li{padding:8px 6px;border-bottom:1px solid #f0f0f0;display:flex;gap:10px;align-items:center;flex-wrap:wrap}
-  .link-a{color:#0066cc;text-decoration:none;word-break:break-all}
-  .link-a:hover{text-decoration:underline}
-  .meta{font-size:0.85rem;color:#666;white-space:nowrap}
-  .pager{display:flex;gap:8px;align-items:center;justify-content:center;margin-bottom:10px}
-  .btn{padding:8px 10px;border-radius:6px;border:1px solid #ccc;background:#f5f5f5;cursor:pointer}
-  .btn:hover{background:#eee}
-  .danger{background:#ffd0d0;border-color:#cc0000}
-  .info{background:#e8f4ff;border-color:#2196F3}
-  .muted{color:#777;font-size:0.92rem}
-  @media (max-width:560px){ .meta{display:block} }
+  body { font-family: Arial, sans-serif; margin: 20px; max-width: 900px; margin-inline: auto; }
+  h2 { text-align: center; }
+  textarea { width: 100%; height: 100px; margin: 10px 0; font-family: monospace; padding: 10px; }
+  button { padding: 10px 15px; cursor: pointer; margin: 5px 0; }
+  .result { margin-top: 20px; white-space: pre-wrap; background: #f9f9f9; border: 1px solid #ccc; padding: 10px; }
+  .pagination { margin: 10px 0; text-align: center; }
+  .pagination button { margin: 0 5px; padding: 5px 10px; }
+  .count { text-align: center; margin-bottom: 10px; font-size: 0.9em; color: #555; }
 </style>
 </head>
 <body>
 
-<h1>Filter / Hapus Berdasarkan ID Toko Shopee</h1>
+<h2>Filter / Hapus Berdasarkan ID Toko Shopee</h2>
+<p>Masukkan satu atau beberapa ID toko (pisah koma, spasi, atau baris baru).<br>
+Contoh: <code>968553125</code> atau <code>https://shopee.co.id/product/968553125/29726307611</code></p>
 
-<div class="card">
-  <div class="muted">Masukkan satu atau beberapa ID toko (pisah koma atau baris baru). Contoh: <code>968553125</code> atau <code>968553125,123456789</code></div>
-  <textarea id="idsInput" placeholder="968553125, 123456789 atau tiap id per baris"></textarea>
-  <div style="margin-top:10px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap">
-    <button class="btn" id="filterBtn" onclick="applyFilter()">🚫 Filter & Hapus Link Toko</button>
-    <button class="btn info" onclick="previewFilter()">🔎 Preview Hapus (tanpa menyimpan)</button>
-    <button class="btn" id="undoBtn" style="display:none" onclick="restoreBackup()">🔁 Pulihkan (Undo)</button>
-  </div>
-  <div class="muted" id="note" style="margin-top:8px">Operasi akan menyimpan backup sementara di memori (bisa di-undo selama halaman belum direload).</div>
-</div>
+<textarea id="idsInput" placeholder="Masukkan ID atau link toko Shopee di sini..."></textarea>
+<button onclick="filterToko()">Filter & Hapus Link Toko</button>
 
-<div class="output">
-  <div id="pagerTop" style="display:none" class="pager">
-    <button class="btn" onclick="changePage(-1)" id="prevBtn">⬅️ Sebelumnya</button>
-    <div id="pageInfo" class="muted"></div>
-    <button class="btn" onclick="changePage(1)" id="nextBtn">➡️ Berikutnya</button>
-  </div>
-
-  <ul id="linksUL" class="links"></ul>
-
-  <div style="text-align:center;margin-top:8px">
-    <div id="stats" class="muted"></div>
-  </div>
-</div>
-
-<div id="toast"></div>
+<div id="outputArea" class="result"></div>
 
 <script>
-/* konfigurasi */
-const PER_PAGE = 99;
+let allData = [];
+let currentPage = 1;
+const perPage = 99;
 
-/* state */
-let lastBackupData = null;
-let aggregated = []; // {link, key}
-let page = 1;
-
-/* toast */
-function showToast(msg, type='info'){
-  const t = document.getElementById('toast');
-  t.textContent = msg;
-  let bg = '#2196F3';
-  if(type==='success') bg='#4CAF50';
-  if(type==='error') bg='#f44336';
-  if(type==='warning') bg='#b36b00';
-  t.style.background = bg;
-  t.style.opacity = '1';
-  t.style.transform = 'translateY(0)';
-  setTimeout(()=>{ t.style.opacity='0'; t.style.transform='translateY(12px)'; },3500);
-}
-
-/* collect links from localStorage */
-function collectLinks(){
-  const list = [];
-  for(let i=0;i<localStorage.length;i++){
-    const key = localStorage.key(i);
-    const raw = localStorage.getItem(key);
-    if(!raw) continue;
-    // try parse JSON
-    let parsed=null;
-    try{ parsed = JSON.parse(raw); } catch(e){ parsed = null; }
-    if(parsed && parsed.inputList && typeof parsed.inputList === 'string'){
-      const lines = parsed.inputList.split('\n').map(s=>s.trim()).filter(Boolean);
-      for(const l of lines) list.push({link:l, key});
-      continue;
-    }
-    if(!parsed && raw.includes('\n')){
-      const lines = raw.split('\n').map(s=>s.trim()).filter(Boolean);
-      for(const l of lines) list.push({link:l, key});
-      continue;
-    }
-    // single-value case
-    const single = raw.trim();
-    if(single && (single.startsWith('http') || /\d{5,}/.test(single))){
-      list.push({link: single, key});
-    }
+// ambil semua data dari localStorage (universal)
+function loadDataFromLocalStorage() {
+  let data = [];
+  for (let key in localStorage) {
+    try {
+      const arr = JSON.parse(localStorage.getItem(key));
+      if (Array.isArray(arr)) data = data.concat(arr);
+    } catch (e) {}
   }
-  return list;
+  return data;
 }
 
-/* render page (pagination above results) */
-function render(){
-  const ul = document.getElementById('linksUL');
-  ul.innerHTML = '';
-  const total = aggregated.length;
-  const totalPages = Math.max(1, Math.ceil(total / PER_PAGE));
-  if(page < 1) page = 1;
-  if(page > totalPages) page = totalPages;
-
-  // show/hide pager
-  const pager = document.getElementById('pagerTop');
-  if(total > 0) pager.style.display = 'flex'; else pager.style.display = 'none';
-
-  const start = (page -1) * PER_PAGE;
-  const chunk = aggregated.slice(start, start + PER_PAGE);
-  for(const it of chunk){
-    const li = document.createElement('li');
-    const a = document.createElement('a');
-    a.href = it.link.startsWith('http') ? it.link : it.link;
-    a.target = '_blank';
-    a.className = 'link-a';
-    a.textContent = it.link;
-    const meta = document.createElement('span');
-    meta.className = 'meta';
-    meta.textContent = it.key;
-    li.appendChild(a);
-    li.appendChild(meta);
-    ul.appendChild(li);
-  }
-
-  document.getElementById('pageInfo').textContent = total===0 ? 'Tidak ada link' : `Menampilkan ${Math.min(start+1,total)}–${Math.min(start+chunk.length,total)} dari ${total} • Halaman ${page}/${totalPages}`;
-  document.getElementById('stats').textContent = total===0 ? '' : `Total link: ${total}`;
-}
-
-/* change page */
-function changePage(delta){
-  page += delta;
-  render();
-}
-
-/* helper: parse IDs input */
-function parseIds(){
+// parsing input ID atau link Shopee
+function parseIds() {
   const raw = document.getElementById('idsInput').value.trim();
-  if(!raw) return [];
-  const parts = raw.split(/[\n,;]+/).map(s=>s.trim()).filter(Boolean);
+  if (!raw) return [];
+  const parts = raw.split(/[\n,; ]+/).map(s => s.trim()).filter(Boolean);
   const ids = [];
-  for(const p of parts){
-    const digits = p.replace(/\D/g,'');
-    if(digits.length >= 5) ids.push(digits);
+  for (const p of parts) {
+    const match = p.match(/product\/(\d+)\//);
+    if (match) {
+      ids.push(match[1]);
+      continue;
+    }
+    const digits = p.replace(/\D/g, '');
+    if (digits.length >= 5) ids.push(digits);
   }
   return Array.from(new Set(ids));
 }
 
-/* match line contains id: product/{id}/ or product/{id} or standalone word */
-function matchContains(line, id){
-  if(!line) return false;
-  const l = line.toLowerCase();
-  if(l.includes(`/product/${id}/`) || l.includes(`/product/${id}`)) return true;
-  const re = new RegExp(`\\b${id}\\b`);
-  return re.test(line);
+// tampilkan hasil dengan pagination
+function renderPage() {
+  const outputArea = document.getElementById('outputArea');
+  if (!allData.length) {
+    outputArea.innerHTML = '<p><i>Tidak ada data ditemukan.</i></p>';
+    return;
+  }
+  const totalPages = Math.ceil(allData.length / perPage);
+  currentPage = Math.min(currentPage, totalPages);
+  const start = (currentPage - 1) * perPage;
+  const end = start + perPage;
+  const pageData = allData.slice(start, end);
+
+  const pagination = `
+    <div class="pagination">
+      <button ${currentPage === 1 ? 'disabled' : ''} onclick="changePage(-1)">⬅️ Sebelumnya</button>
+      <span>Halaman ${currentPage} / ${totalPages}</span>
+      <button ${currentPage === totalPages ? 'disabled' : ''} onclick="changePage(1)">➡️ Berikutnya</button>
+    </div>
+    <div class="count">Menampilkan ${pageData.length} dari total ${allData.length} link</div>
+  `;
+
+  const list = pageData.map((item, i) => `${start + i + 1}. ${item.link || item}`).join('\n');
+  outputArea.innerHTML = pagination + '<pre>' + list + '</pre>';
 }
 
-/* preview filter: show what remains without changing storage */
-function previewFilter(){
+function changePage(delta) {
+  currentPage += delta;
+  renderPage();
+}
+
+// fungsi utama filter
+function filterToko() {
   const ids = parseIds();
-  if(ids.length === 0) return showToast('⚠️ Masukkan minimal 1 ID toko untuk preview.', 'warning');
-  const all = collectLinks();
-  // compute remaining
-  const removed = new Set();
-  const remaining = [];
-  for(const it of all){
-    let rm=false;
-    for(const id of ids){ if(matchContains(it.link, id)){ rm=true; break; } }
-    if(!rm) remaining.push(it);
-  }
-  aggregated = remaining;
-  page = 1;
-  render();
-  showToast(`🔎 Preview: ${all.length - remaining.length} link akan dihapus (preview).`, 'info');
-}
-
-/* main apply filter (with in-memory backup and undo) */
-function applyFilter(){
-  const ids = parseIds();
-  if(ids.length === 0) return showToast('⚠️ Masukkan minimal 1 ID toko.', 'warning');
-
-  // backup in-memory
-  lastBackupData = {};
-  for(let i=0;i<localStorage.length;i++){
-    const k = localStorage.key(i);
-    lastBackupData[k] = localStorage.getItem(k);
-  }
-  document.getElementById('undoBtn').style.display = 'inline-block';
-  document.getElementById('note').textContent = 'Backup disimpan di memori — gunakan Pulihkan (Undo) jika perlu.';
-
-  // iterate keys safely
-  const keys = [];
-  for(let i=0;i<localStorage.length;i++) keys.push(localStorage.key(i));
-
-  const newStore = {};
-  let totalLinesRemoved = 0;
-  let keysUpdated = 0;
-  let keysRemoved = 0;
-
-  for(const key of keys){
-    const raw = localStorage.getItem(key);
-    if(!raw){ continue; }
-
-    // try JSON with inputList
-    let parsed=null;
-    let isJson=false;
-    try{ parsed = JSON.parse(raw); isJson=true; } catch(e){ isJson=false; parsed=null; }
-
-    if(isJson && parsed && typeof parsed.inputList === 'string'){
-      const lines = parsed.inputList.split('\n').map(s=>s.trim()).filter(Boolean);
-      const kept = [];
-      for(const ln of lines){
-        let rm=false;
-        for(const id of ids){ if(matchContains(ln, id)){ rm=true; break; } }
-        if(!rm) kept.push(ln); else totalLinesRemoved++;
-      }
-      if(kept.length === 0){
-        keysRemoved++;
-      } else {
-        parsed.inputList = kept.join('\n');
-        newStore[key] = JSON.stringify(parsed);
-        keysUpdated++;
-      }
-      continue;
-    }
-
-    // if plain multiline
-    if(!isJson && raw.includes('\n')){
-      const lines = raw.split('\n').map(s=>s.trim()).filter(Boolean);
-      const kept = [];
-      for(const ln of lines){
-        let rm=false;
-        for(const id of ids){ if(matchContains(ln, id)){ rm=true; break; } }
-        if(!rm) kept.push(ln); else totalLinesRemoved++;
-      }
-      if(kept.length === 0){
-        keysRemoved++;
-      } else {
-        newStore[key] = kept.join('\n');
-        keysUpdated++;
-      }
-      continue;
-    }
-
-    // other single values -> keep as is
-    newStore[key] = raw;
+  if (!ids.length) {
+    alert('Masukkan minimal satu ID atau link toko Shopee!');
+    return;
   }
 
-  // write newStore
-  localStorage.clear();
-  Object.keys(newStore).forEach(k => localStorage.setItem(k, newStore[k]));
+  let data = loadDataFromLocalStorage();
+  if (!data.length) {
+    alert('Tidak ada data ditemukan di localStorage.');
+    return;
+  }
 
-  // update aggregated and UI
-  aggregated = collectLinks();
-  page = 1;
-  render();
+  // hapus data yang mengandung ID toko
+  const filtered = data.filter(item => {
+    const link = (typeof item === 'string') ? item : (item.link || '');
+    return !ids.some(id => link.includes(`product/${id}/`));
+  });
 
-  showToast(`✅ Filter selesai. Keys diperbarui: ${keysUpdated}, Keys dihapus: ${keysRemoved}, Link dihapus: ${totalLinesRemoved}`, 'success');
+  // simpan ulang data yang sudah difilter
+  localStorage.setItem('filtered_result', JSON.stringify(filtered));
+
+  allData = filtered;
+  currentPage = 1;
+  renderPage();
+
+  alert(`Selesai! Semua link dengan ID toko [${ids.join(', ')}] telah dihapus.`);
 }
-
-/* restore backup (undo) */
-function restoreBackup(){
-  if(!lastBackupData) return showToast('❌ Tidak ada backup di memori.', 'error');
-  if(!confirm('Pulihkan backup? Ini akan mengganti seluruh localStorage saat ini.')) return;
-  localStorage.clear();
-  Object.keys(lastBackupData).forEach(k => localStorage.setItem(k, lastBackupData[k]));
-  lastBackupData = null;
-  document.getElementById('undoBtn').style.display = 'none';
-  document.getElementById('note').textContent = 'Backup dipulihkan / tidak ada backup tersimpan.';
-  aggregated = collectLinks();
-  page = 1;
-  render();
-  showToast('🔁 Backup dipulihkan.', 'success');
-}
-
-/* init: prepare aggregated but don't force preview; only show if there are links */
-window.addEventListener('load', () => {
-  aggregated = collectLinks();
-  if(aggregated.length>0) render();
-});
 </script>
+
 </body>
 </html>
